objects/project_cloud__Issue__c.object
<CustomObject>
    <description>Issues that are raised during the project such as defects or enhancements</description>
    <fields>
        <fullName>project_cloud__Description__c</fullName>
        <inlineHelpText>A description of what the issue is about</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>project_cloud__Origin__c</fullName>
        <inlineHelpText>The origin of the issue</inlineHelpText>
        <label>Origin</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Customer</fullName>
                </value>
                <value>
                    <fullName>Project Team</fullName>
                    <default>true</default>
                    <label>Project Team</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>project_cloud__Priority__c</fullName>
        <inlineHelpText>The priority that the issue has within the organization</inlineHelpText>
        <label>Priority</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>High</fullName>
                </value>
                <value>
                    <fullName>Medium</fullName>
                    <default>true</default>
                    <label>Medium</label>
                </value>
                <value>
                    <fullName>Low</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>project_cloud__Project_Task__c</fullName>
        <inlineHelpText>The project task that the issue is related to</inlineHelpText>
        <label>Project Task</label>
        <referenceTo>project_cloud__Project_Task__c</referenceTo>
        <relationshipName>Issues</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>project_cloud__Status__c</fullName>
        <inlineHelpText>The current status of the issue</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                    <label>New</label>
                </value>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>project_cloud__Type__c</fullName>
        <inlineHelpText>The type of issue that this is</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Clarification</fullName>
                </value>
                <value>
                    <fullName>Defect</fullName>
                </value>
                <value>
                    <fullName>Enhancement</fullName>
                </value>
                <value>
                    <fullName>Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Deprecated (Issues &amp; Risks)</label>
    <listViews>
        <fullName>project_cloud__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Issue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Deprecated (Issues &amp; Risks)</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>project_cloud__Issues_Risk_Deprecated</fullName>
        <active>true</active>
        <description>The Issues &amp; Risk object has been deprecated, to create a Issues &amp; Risk use the Ticket Object</description>
        <errorConditionFormula>ISNEW()</errorConditionFormula>
        <errorMessage>The Issues &amp; Risk object has been deprecated, to create a Issues &amp; Risk use the Ticket Object</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Priority_Is_Required</fullName>
        <active>false</active>
        <description>Check if Priority field is filled.</description>
        <errorConditionFormula>ISBLANK(TEXT(project_cloud__Priority__c))</errorConditionFormula>
        <errorDisplayField>project_cloud__Priority__c</errorDisplayField>
        <errorMessage>You must enter an issue priority</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Status_Is_Required</fullName>
        <active>false</active>
        <description>Check if Status__c field has any value.</description>
        <errorConditionFormula>ISBLANK(TEXT(project_cloud__Status__c))</errorConditionFormula>
        <errorDisplayField>project_cloud__Status__c</errorDisplayField>
        <errorMessage>You must enter an issue status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>project_cloud__Type_Is_Required</fullName>
        <active>false</active>
        <description>Check if the Type__c field has any value</description>
        <errorConditionFormula>ISBLANK(TEXT(project_cloud__Type__c))</errorConditionFormula>
        <errorDisplayField>project_cloud__Type__c</errorDisplayField>
        <errorMessage>You must enter an issue type</errorMessage>
    </validationRules>
</CustomObject>